{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 131,
  "lineage": "0912f9a3-2c9e-ac9a-6bc6-ac08baf37ac5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TestVM1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:564314875496:instance/i-03049ebc1abac7d17",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03049ebc1abac7d17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "north-virginiaASUS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b7b5cb79e97dba1",
            "private_dns": "ip-10-30-1-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.8",
            "public_ip": "35.168.58.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd9eeb908cae594c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0580a52a44d0a4a16",
            "tags": {
              "Name": "ec2-us-east-1-region"
            },
            "tags_all": {
              "Name": "ec2-us-east-1-region"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "us-east-1-EBS"
            },
            "vpc_security_group_ids": [
              "sg-0d48977cd5c785a2c"
            ]
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_security_group.main",
            "module.vpc_us_east_1.aws_subnet.public",
            "module.vpc_us_east_1.aws_vpc.main",
            "module.vpc_us_east_1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TestVM2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0edf386e462400a51",
            "arn": "arn:aws:ec2:us-east-2:564314875496:instance/i-093d305f41a90ce92",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093d305f41a90ce92",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "us-east-2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0381df976e8fc95af",
            "private_dns": "ip-10-40-1-148.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.40.1.148",
            "public_ip": "52.15.46.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5a3b1a4b23c1ff4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b92fc322a0ad65b3",
            "tags": {
              "Name": "ec2-us-east-2-region"
            },
            "tags_all": {
              "Name": "ec2-us-east-2-region"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "us-east-2-EBS"
            },
            "vpc_security_group_ids": [
              "sg-07edfc8a0286ff6af"
            ]
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_security_group.main",
            "module.vpc_us_east_2.aws_subnet.public",
            "module.vpc_us_east_2.aws_vpc.main",
            "module.vpc_us_east_2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564314875496:internet-gateway/igw-09f82a98e2d504e8c",
            "id": "igw-09f82a98e2d504e8c",
            "owner_id": "564314875496",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-05a3e0c5d6db92ea3"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564314875496:route-table/rtb-09d97db517a75738a",
            "id": "rtb-09d97db517a75738a",
            "owner_id": "564314875496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f82a98e2d504e8c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a3e0c5d6db92ea3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_internet_gateway.main",
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b880e8e508e7b63",
            "route_table_id": "rtb-09d97db517a75738a",
            "subnet_id": "subnet-0580a52a44d0a4a16"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_internet_gateway.main",
            "module.vpc_us_east_1.aws_route_table.public",
            "module.vpc_us_east_1.aws_subnet.public",
            "module.vpc_us_east_1.aws_vpc.main",
            "module.vpc_us_east_1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564314875496:security-group/sg-0d48977cd5c785a2c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d48977cd5c785a2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240623101648308000000001",
            "name_prefix": "terraform-",
            "owner_id": "564314875496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-security-group"
            },
            "tags_all": {
              "Name": "main-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a3e0c5d6db92ea3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564314875496:subnet/subnet-0580a52a44d0a4a16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0580a52a44d0a4a16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564314875496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-05a3e0c5d6db92ea3"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.main",
            "module.vpc_us_east_1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564314875496:vpc/vpc-05a3e0c5d6db92ea3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-053f80cf86087cc04",
            "default_route_table_id": "rtb-0e9b3f8129061acbc",
            "default_security_group_id": "sg-0342102de12316fec",
            "dhcp_options_id": "dopt-0a4044588dc133a74",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a3e0c5d6db92ea3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e9b3f8129061acbc",
            "owner_id": "564314875496",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:564314875496:internet-gateway/igw-0b9cfa4b475d62cee",
            "id": "igw-0b9cfa4b475d62cee",
            "owner_id": "564314875496",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0a436f09ff6526240"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:564314875496:route-table/rtb-006203e5d8dd3c434",
            "id": "rtb-006203e5d8dd3c434",
            "owner_id": "564314875496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9cfa4b475d62cee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a436f09ff6526240"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_2.aws_internet_gateway.main",
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4048c1c49e43d85",
            "route_table_id": "rtb-006203e5d8dd3c434",
            "subnet_id": "subnet-0b92fc322a0ad65b3"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_internet_gateway.main",
            "module.vpc_us_east_2.aws_route_table.public",
            "module.vpc_us_east_2.aws_subnet.public",
            "module.vpc_us_east_2.aws_vpc.main",
            "module.vpc_us_east_2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:564314875496:security-group/sg-07edfc8a0286ff6af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07edfc8a0286ff6af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240623101650098400000001",
            "name_prefix": "terraform-",
            "owner_id": "564314875496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-security-group"
            },
            "tags_all": {
              "Name": "main-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a436f09ff6526240"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:564314875496:subnet/subnet-0b92fc322a0ad65b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b92fc322a0ad65b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564314875496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0a436f09ff6526240"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.main",
            "module.vpc_us_east_2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:564314875496:vpc/vpc-0a436f09ff6526240",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-03c628bcaa6a4b4c9",
            "default_route_table_id": "rtb-04f18997a9517353b",
            "default_security_group_id": "sg-089f70a9b5a9995b2",
            "dhcp_options_id": "dopt-03e29912f0343b4c4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a436f09ff6526240",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f18997a9517353b",
            "owner_id": "564314875496",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}